--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: java
+jdk:
+- oraclejdk7
 sudo: false
 script: mvn clean verify
+after_success:
+- mvn clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:report
